# heniautos

./: .gitignore  .readthedocs.yaml  Comparison with Meritt.ipynb  Comparison with Planeaux.ipynb  HISTORY.md  Heniautos Basics.ipynb  MANIFEST.in  README-heniautos-cmd.md  README.md  Working with Calendar Equations.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: command_line.rst  conciliar_calendar.rst  conf.py  cookbook.rst  equations.rst  festival_calendar.rst  func_ref.rst  greek_calendar_basics.rst  index.rst  requirements.txt
guide/: README.md  calendar-equations-command.md  calendar-equations.md  conciliar-calendar.md  festival-calendar-basics.md  heniautos-command.md  programming-with-heniautos.md  reading-dated-inscriptions.md
heniautos/: __init__.py  __version__.py  calendar_equation.py  command_line.py  dinsmoor.txt  ephemeris.py  equations.py  heniautos.py  new_moons.tsv  prytanies.py  solstices.tsv
misc/: chart-calendar.py
tables/: 399-300-bce.tsv
tests/: conftest.py  test_calculations.py  test_ephemeris.py  test_equations.py  test_heniautos.py  test_loading_data.py  test_prytanies.py
utils/: Makefile  gen_astro_data.py  ltest.tsv
