[metadata]
name = heniautos
version = attr: heniautos.__version__
author = Sean Redmond
author_email = github-smr@sneakemail.com
description = Ancient Athenian calendar generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seanredmond/heniautos
project_urls =
    Bug Tracker = https://github.com/seanredmond/heniautos/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
#package_dir =
#    = src
packages = find:
python_requires = >=3.8

#[options.packages.find]
#where = src

[options.entry_points]
console_scripts =
    heniautos = heniautos.command_line:main
    calendar-equation = heniautos.calendar_equation:main