[metadata]
name = heniautos
version = 2.0.0rc
author = Sean Redmond
author_email = github-smr@sneakemail.com
description = Ancient Athenian calendar generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seanredmond/heniautos
project_urls =
    Bug Tracker = https://github.com/seanredmond/heniautos/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
     juliandate
include_package_data = True

[options.entry_points]
console_scripts =
    heniautos = heniautos.command_line:main
    calendar-equation = heniautos.calendar_equation:main